# AlphaJanggi

./: CMakeLists.txt  MCTS.cpp  MCTS.h  Model.cpp  Model.h  Project1.cpp  README.md  actionTable.py  ai_vs_ai.py  dirichlet.h  environ.py  game.py  getopt.h  human_vs_ai.py  mcts.py  model.py  muzero.py  pch.cpp  pch.h  playAndTrain.py  self-play.py  train.py
lib/: actionTable.py  game.py  mcts.py  model.py  webFunction.py
